[package]
name = "reaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = ["collector"] }
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde = "1.0"
serde_derive = "1.0"
async-trait = "0.1"
strum = { version = "0.25", features = ["derive"] }
regex = "1.9"
lazy_static = "1.4"
objectid = { version = "0.2", features = ["serde"] }
time = "0.3"
inflections = "1.1"
rand = "0.8"
redis = { version = "0.23", features = ["tokio-comp"] }
ordinal = "0.3"